=== librsvg 2.1.1 ===
	
2002-10-14  Alexander Larsson  <alexl@redhat.com>

	* gdk-pixbuf-loader/Makefile.am (INCLUDES): 
	* gdk-pixbuf-loader/io-svg.c:
	Fix includes with srcdir != builddir

	* NEWS:
	Add news items

2002-10-10  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_set_default_dpi): Rename function
	* test-rsvg.c: Support --dpi argument
	* test-display.c: Support --dpi argument
	
2002-10-09  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_start_svg): Fix for zoom calculations
	(rsvg_start_element): hack for Illustrator 9
	(rsvg_stop_handler_end): ditto

	* test-display.c (*): major updates. now gets built. useful utility
	* Makefile.am: ditto
	
2002-10-07  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_start_svg): Handle case where size isn't supplied by 
	svg, but is by a callback
	
2002-10-07  Dom Lachowicz <doml@appligent.com>

	* gimp-plugin/svg.c (): New file, gimp SVG plugin loader
	
2002-10-07  Dom Lachowicz <doml@appligent.com>

	* rsvg-paint-server.c (rsvg_clone_linear_gradient, rsvg_clone_radial_gradient): new functions for cloning gradient states
	* rsvg.c (rsvg_gradient_stop_handler_new_clone): new function for setting up a gradient stop handler from a cloned gradient
	(rsvg_start_radial_gradient): Handle xlink:href for cloned gradients
	(rsvg_start_linear_gradient): ditto
	(text_handler_characters): Fix segv
	(*): fix misc memleaks. thanks valgrind!
	
2002-10-06  Dom Lachowicz <doml@appligent.com>

	* svg-rc-style.c (): Added const-ness to struct
	* rsvg.c (rsvg_parse_cssbuffer, rsvg_style_handler_*): new functions
	to implement CSS style parsing
	(*): Implement CSS1/CSS2 style handling based on tagname (eg. "text") and on class (eg. "error")
	(*): Implement proper handler nesting, cleanup a few memleaks
	
2002-10-05  Dom Lachowicz <doml@appligent.com>

	* Move test images to tests subdirectory, add more tests
	* rsvg.c (start_image): Handle affines, rotation, scaling, translate. 